se modifico el punto 2, metodo de filtrado origen destino
